--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,8 @@
 		<img src="images/rrd/memfree.png" />
 		<img src="images/rrd/pcount.png" />
 		<img src="images/rrd/usbfree.png" />
-		<img src="images/rrd/usbinuse.png" />
+		<img src="images/rrd/totalfree.png" />
+		<img src="images/rrd/swapfree.png" />
+		<img src="images/rrd/networkrxtx.png" />
     </body>
 </html>
