CPU Load RRD stuff added

--- a/html/index.html
+++ b/html/index.html
@@ -24,5 +24,6 @@
 		<img src="images/rrd/totalfree.png" />
 		<img src="images/rrd/swapfree.png" />
 		<img src="images/rrd/networkrxtx.png" />
+		<img src="images/rrd/cpuload.png" />
     </body>
 </html>
